# Ising-model-online

./: README.md
backend/: BackendAPI  CMakeCache.txt  CMakeLists.txt  Makefile  charts.py  cmake_install.cmake
backend/include/: ResourceFactory.h  ServiceSettings.h  WebServiceManager.h  hexModel.h  isingModel.h  squareModel.h  utils.h
backend/src/: ResourceFactory.cpp  ServiceSettings.cpp  WebServiceManager.cpp  hexModel.cpp  main.cpp  squareModel.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.js  SimulateAPI.js
frontend/src/components/: Description.js  Footer.js  LoadingScreen.js  ParametersManager.js  SimulationPanel.js
frontend/src/components/Animation/: AnimationCube.js  AnimationMesh.js  ControlPanel.js  MovingCamera.js  SimulationCanvas.js
frontend/src/components/Charts/: LinearChart.js  SimulationCharts.js
